2004-05-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/lex3.test, tests/yacc6.test: Require GNU Make.
	Fixing these for BSD Make requires invasive changes (lexers and
	parsers must be built into $srcdir, and--most annoyingly--all
	references to parse.h must be changed to $(srcdir)/parse.h).
	Report from Mark D. Baushke.

2004-05-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/defs.in (GNUmake): Grep for GNU to parry FreeBSD make.
	Report from Mark D. Baushke.

2004-04-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/texinfo.tex: New upstream version.

	* lib/depcomp (tru64): Clarify comments.  Thanks to Nicolas Joly.

	* doc/automake.texi (Headers): Revamp.

2004-04-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (check_typos): Clarify the diagnostic.
	* tests/warnopts.test: Adjust.

	* lib/Automake/VarDef.pm (append): Turn VAR_ASIS variables into
	VAR_PRETTY variables to work around make implementation with
	limited line length, such as OSF1/Tru64 make.
	* tests/longline.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	* tests/pluseq3.test, tests/pluseq8.test: Adjust.
	Report from Simon Josefsson.

	* lib/am/tags.am (TAGS): Pass `.' to Exuberant Ctags if
	--etags-include is used but no other files are supplied, so it
	creates the TAGS file anyway.
	Report from Akim Demaille.

	* lib/depcomp (tru64) [libtool]: Nicolas Joly reported on
	2002-06-12 that dependencies were output in $dir.libs/$base.lo.d.
	Teun Burgers reported on 2004-03-30 they were in
	$dir.libs/$base.o.d.  Try both.

2004-04-23  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/414:
	Introduce option filename-length-max=99.
	* doc/automake.texi (Options): Document it.
	* configure.ac (AM_INIT_AUTOMAKE): Use it.
	* lib/Automake/Options.pm (_process_option_list): Recognize it.
	* automake.in (handle_dist): Set FILENAME_FILTER.
	* lib/am/distdir.am (distdir) [FILENAME_FILTER]: Diagnose long
	filenames.
	* tests/fn99.test: New file.
	* tests/Makefile.am (TESTS): Add fn99.test.
