@@ -62,7 +62,7 @@ TAGS: %TAGSDIRS% $(HEADERS) $(SOURCES) %CONFIG% $(TAGS_DEPENDENCIES) \
 ?SUBDIRS?	list='$(SUBDIRS)'; for subdir in $$list; do \
 ## Do nothing if we're trying to look in `.'.
 ?SUBDIRS?	  if test "$$subdir" = .; then :; else \
-?SUBDIRS?	    test -f $$subdir/TAGS && \
+?SUBDIRS?	    test ! -f $$subdir/TAGS || \
 ## Note that the = is mandatory for --etags-include.
 ?SUBDIRS?	      tags="$$tags $$include_option=$$here/$$subdir/TAGS"; \
 ?SUBDIRS?	  fi; \
@@ -77,7 +77,7 @@ TAGS: %TAGSDIRS% $(HEADERS) $(SOURCES) %CONFIG% $(TAGS_DEPENDENCIES) \
 	       END { for (i in files) print i; }'`; \
 ## Make sure we have something to run etags on.
 	if test -z "$(ETAGS_ARGS)$$tags$$unique"; then :; else \
-	  test -z "$$unique" && unique=$$empty_fix; \
+	  test -n "$$unique" || unique=$$empty_fix; \
 	  $(ETAGS) $(ETAGSFLAGS) $(AM_ETAGSFLAGS) $(ETAGS_ARGS) \
 	    $$tags $$unique; \
 	fi
