@@ -1,3 +1,11 @@
+2004-05-13  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* Makefile.am (fetch): Work even with FreeBSD "make", which
+	uses sh -e and thus errors-out if a simple-command fails.
+	* lib/am/check.am (check-TESTS): Likewise.
+	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Likewise.
+	* lib/am/tags.am (TAGS): Likewise.
+
 2004-05-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/lex3.test, tests/yacc6.test: Require GNU Make.
